--- a/client/app/src/main/res/layout/fragment_home.xml
+++ b/client/app/src/main/res/layout/fragment_home.xml
@@ -1,23 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:app="http://schemas.android.com/apk/res-auto"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content">
-    <!--<xyz.matteobattilana.library.WeatherView-->
-        <!--android:id="@+id/wv_weather_status"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1dp"-->
-        <!--android:layout_marginLeft="-100dp"-->
-        <!--android:layout_marginRight="-100dp"-->
-        <!--app:angle="-3"-->
-        <!--app:fadeOutTime="1000"-->
-        <!--app:fps="40"-->
-        <!--app:lifeTime="2200"-->
-        <!--app:numParticles="55"-->
-        <!--app:orientationMode="ENABLE"-->
-        <!--app:startingWeather="RAIN"/>-->
-    <com.hawksjamesf.spacecraft.ui.home.view.refresh.RefreshListView
-        android:id="@+id/rlv_pull_refresh"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
+    <TextView
+        android:id="@+id/text"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
-</FrameLayout>
+        android:layout_height="wrap_content"
+        android:text="home fragment"
+        android:textAlignment="center"
+        android:textSize="52sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.25"/>
+
+    <Button
+        android:id="@+id/bt_navigate_destination"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="navigate_destination_button"
+        app:layout_constraintBottom_toTopOf="@+id/bt_navigate_action"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        app:layout_constraintVertical_bias="0.594"/>
+
+    <Button
+        android:id="@+id/bt_navigate_action"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:text="navigate_action_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bt_navigate_destination"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
