--- a/client/app/src/main/res/layout/fragment_photo.xml
+++ b/client/app/src/main/res/layout/fragment_photo.xml
@@ -2,5 +2,6 @@
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/iv_photo"
+    android:fitsSystemWindows="true"
     android:layout_width="match_parent"
     android:layout_height="match_parent"/>
