--- a/client/app/src/main/res/values-v19/themes.xml
+++ b/client/app/src/main/res/values-v19/themes.xml
@@ -10,4 +10,8 @@
 
     <style name="PhotoTheme" parent="AppTheme.BarsTransparent">
     </style>
+
+    <style name="HomeTheme" parent="AppTheme.BarsTransparent">
+        <item name="android:windowTranslucentNavigation">false</item>
+    </style>
 </resources>
