--- a/client/app/src/main/res/values-v21/themes.xml
+++ b/client/app/src/main/res/values-v21/themes.xml
@@ -44,9 +44,8 @@
 
     <style name="AppTheme.BarsTransparent">
         <!--设置状态栏和导航栏为全透明-->
-        <item name="android:fitsSystemWindows">true</item>
         <item name="android:statusBarColor">@android:color/transparent</item>
-        <item name="android:navigationBarColor">@android:color/holo_blue_bright</item>
+        <item name="android:navigationBarColor">@android:color/transparent</item>
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
     </style>
 
@@ -72,6 +71,10 @@
         <!--</item>-->
 
 
+    </style>
+
+    <style name="HomeTheme" parent="AppTheme.BarsTransparent">
+        <item name="android:navigationBarColor">@color/bottom_navigation_colors</item>
     </style>
 
 </resources>
