--- a/client/app/src/main/res/layout/activity_viewpager.xml
+++ b/client/app/src/main/res/layout/activity_viewpager.xml
@@ -3,7 +3,13 @@
               xmlns:app="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/apricot"
               android:orientation="vertical">
+
+    <!--<androidx.recyclerview.widget.RecyclerView-->
+    <!--android:id="@+id/rv"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"/>-->
 
     <com.hawksjamesf.common.CarouselView
         android:id="@+id/cv"
@@ -15,14 +21,19 @@
         app:cv_interval="5000"
         />
 
-    <com.hawksjamesf.common.CarouselView
-        android:id="@+id/cv1"
+    <com.hawksjamesf.common.ChaplinView
+        android:id="@+id/clv"
         android:layout_width="match_parent"
         android:layout_height="153dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginRight="12dp"
-        app:cv_autoStart="true"
-        app:cv_interval="5000"
+        android:layout_gravity="center"/>
+
+
+    <VideoView
+        android:id="@+id/vv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="center"
         />
+
 
 </LinearLayout>
