--- a/client/app/src/main/res/layout/activity_viewpager.xml
+++ b/client/app/src/main/res/layout/activity_viewpager.xml
@@ -23,9 +23,10 @@
 
     <com.hawksjamesf.common.ChaplinView
         android:id="@+id/clv"
-        android:layout_width="match_parent"
-        android:layout_height="153dp"
-        android:layout_gravity="center"/>
+        android:layout_width="300dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        />
 
 
     <VideoView
