--- a/client/app/src/main/res/layout/activity_viewpager.xml
+++ b/client/app/src/main/res/layout/activity_viewpager.xml
@@ -31,8 +31,8 @@
 
     <VideoView
         android:id="@+id/vv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center"
         />
 
