--- a/client/app/src/main/res/layout/item_my.xml
+++ b/client/app/src/main/res/layout/item_my.xml
@@ -7,7 +7,8 @@
     <TextView
         android:id="@+id/tv_text"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="50dp"
+        android:gravity="center"
         android:text="sadfdasfasfdsafdsafds"/>
 
 </LinearLayout>
