--- a/client/app/src/main/res/layout/item_top_bar.xml
+++ b/client/app/src/main/res/layout/item_top_bar.xml
@@ -21,7 +21,7 @@
             android:layout_marginTop="10dp"
             android:text="safsafasfdsadfdsaf"/>
 
-        <com.hawksjamesf.common.ChaplinView
+        <com.hawksjamesf.common.widget.ChaplinVideoView
             android:id="@+id/clv"
             android:layout_width="match_parent"
             android:layout_height="200dp"/>
