--- a/client/common/src/video/res/layout/activity_video.xml
+++ b/client/common/src/video/res/layout/activity_video.xml
@@ -3,7 +3,7 @@
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#0099cc"
-             tools:context="com.hawksjamesf.spacecraft.video.VideoActivity">
+             tools:context="com.hawksjamesf.common.VideoActivity">
 
     <!-- The primary full-screen view. This can be replaced with whatever view
          is needed to present your content, e.g. VideoView, SurfaceView,
