--- a/client/app/src/main/res/layout/activity_feedback_util.xml
+++ b/client/app/src/main/res/layout/activity_feedback_util.xml
@@ -15,6 +15,7 @@
         />
 
     <ProgressBar
+        android:id="@+id/determinateBar"
         style="?android:progressBarStyleHorizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -24,9 +25,11 @@
         />
 
     <ProgressBar
+        android:id="@+id/indeterminateBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:indeterminate="true"
-        android:indeterminateDrawable="@drawable/cust_indeterminate_progress_bar"/>
+        android:indeterminateDrawable="@drawable/cust_indeterminate_progress_bar"
+        />
 
 </LinearLayout>
