--- a/client/app/src/animationsExprimental/res/layout/item_image_and_text.xml
+++ b/client/app/src/animationsExprimental/res/layout/item_image_and_text.xml
@@ -1,24 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:background="@color/apricot"
-              android:gravity="center_horizontal"
-              android:orientation="vertical">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="200dp"
+             android:layout_height="wrap_content"
+             android:background="@android:color/white"
+             android:padding="5dp"
+             android:transitionGroup="false"
+    >
 
-    <ImageView
-        android:id="@+id/iv"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scaleType="centerCrop"
-        android:src="@drawable/tmp"/>
+        android:layout_height="match_parent"
+        android:background="@drawable/placeholder"
+        />
 
-    <TextView
-        android:id="@+id/tv_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:text="你好吗我很好，她不好"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="vertical"
+        >
 
-</LinearLayout>
+        <ImageView
+            android:id="@+id/iv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="centerCrop"
+            android:src="@drawable/tmp"/>
+
+        <TextView
+            android:id="@+id/tv_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:text="你好吗我很好，她不好"/>
+    </LinearLayout>
+
+</FrameLayout>
