--- a/app/src/scrollExprimental/res/layout/item_nest.xml
+++ b/app/src/scrollExprimental/res/layout/item_nest.xml
@@ -3,12 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="horizontal">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_nest"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight="1"
+        tools:listitem="@layout/item_dump"
         android:gravity="center"/>
 
     <TextView
